--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Losnen/pugjs-example.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Samuel Ramos Barroso",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Losnen/pugjs-example/issues"
